      in a new tab "Shortcuts". (by Valentin Gologuzov)
      Please not that the arrow keys, Backspace and Escape cannot be bound
      to actions right now, unless you're manually editing the config file.

    - During database upgrade, MComix did not consider that books in the
      "Last read" database might no longer exist, leading to program crash.
      This has been fixed.

    - Fixed win32 builds missing the 'calendar' module.

    - Fixed bookmarks not being displayed in the Ubuntu Unity global menu.

    - Fixed 'Continue reading' not working when files are opened from
      the command line (by Boris Bogar).

    - The ALT+Left and ALT+Right keys will now either advance one page,
      or go back one page, depending on the user being in manga mode.

    - CTRL plus mouse wheel will now zoom in/out one level.

    - Manual zooming will now use a logarithmic scale instead of a linear
      spline.

    - The library will now use natural sorting for "Sort by name" and
      "Sort by path" instead of alphanumeric sorting, bringing it in line
      with most other sorting done by MComix.

    - Adding a book to a collection with the same book already existing
      in another collection did not immediately show the book in the
      library main view when the new collection was already selected.

    - MComix can now use the '7z' executable to read .tar.xz and .tar.lzma
      archives.

    - ZIP archives using BZIP2 compression will now fall back to external
      unzip/7z instead of failing (by Awad Mackie).

    - MComix will now use the current GTK theme's icons for
      Next/Previous buttons.

    - Updated traditional Chinese translation (by Wayne Su).

MComix 1.00
Release date: 26.04.2013

    - When "Store information about recently opened files" is enabled in
      the preferences dialog, all opened books will automatically be added
      to the library and moved into the collection "Recent". In addition,